CSPACE-4744: Made all plus icons to show up properly. Next step is not to allow element to jump on another line when screen is getting smaller and fix the width for elements.

--- a/src/main/webapp/defaults/css/cspace.css
+++ b/src/main/webapp/defaults/css/cspace.css
@@ -695,7 +695,7 @@ td.fl-date-group {
 .info-pair .content table, .info-pair-date .content table, .info-pair-select table {
 /*     width:100%;  */
     border-spacing:0; 
-    background-color:#FFF; 
+    background-color:#FFFFFF;
     margin-top:0; 
     border:1px solid #C7CFD4; 
     padding:0;
